--- a/package.json
+++ b/package.json
@@ -17,9 +17,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.9",
+    "@tailwindcss/vite": "^4.0.14",
+    "ol": "^10.4.0",
+    "ol-contextmenu": "^5.5.0",
+    "ol-ext": "^4.0.27",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-openlayers": "^11.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
