--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ol-contextmenu": "^5.5.0",
     "ol-ext": "^4.0.27",
     "pinia": "^3.0.1",
+    "rbush": "^4.0.1",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
