--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@formkit/vue": "^1.6.9",
     "@tailwindcss/vite": "^4.0.14",
     "@turf/turf": "^7.2.0",
+    "@vueuse/core": "^13.0.0",
     "ol": "^10.4.0",
     "ol-contextmenu": "^5.5.0",
     "ol-ext": "^4.0.27",
